--- a/app/styles/components/classroom_lessons/_generic_student.scss
+++ b/app/styles/components/classroom_lessons/_generic_student.scss
@@ -1,7 +1,8 @@
 .prompt {
   font-size: 36px;
-  text-align: center;
+  text-align: left;
   margin: auto;
+  margin-bottom: 22px;
 }
 
 .question-button-group {
