--- a/app/styles/components/_student-question.scss
+++ b/app/styles/components/_student-question.scss
@@ -1,6 +1,6 @@
 .feedback-row {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   margin-top: 33px;
   img {
     max-width: 22px;
