adds styling for class answers

--- a/app/styles/components/_student-question.scss
+++ b/app/styles/components/_student-question.scss
@@ -28,6 +28,14 @@
   }
 }
 
+.li-number {
+  font-family: AdelleSans;
+  font-size: 30px;
+  color: #00c2a2;
+  font-weight: 600;
+  padding-right: 10px;
+}
+
 .student.text-editor.card {
   margin-top: 20px;
   min-height: 68px;
