adds elementary to home page

--- a/app/views/pages/home_new.html.erb
+++ b/app/views/pages/home_new.html.erb
@@ -6,7 +6,7 @@
     <h1 class="q-h1 text-white">Free tools to make your students better writers.</h1>
     <p class="text-white">
       Quill provides free writing and grammar activities
-      for middle and high school students.
+      for elementary, middle, and high school students.
     </p>
     <a href="/account/new" class="q-button cta-button cta-home text-quillgreen bg-white">Sign Up</a>
   </div>
