--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -1,5 +1,6 @@
 .play-lesson-container {
   background-color: #ffffff;
+  height: calc(100vh - 50px);
   display: flex;
   justify-content: center;
   .main-content {
