Highlighted differences in student answers from prompt on teacher side

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -85,6 +85,9 @@
             input {
               display: none;
             }
+            .submission-differences {
+              color: #00c2a2;
+            }
           }
         }
         tr:last-child {
