--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -10,6 +10,7 @@
 @import 'classroom_lessons/_watch_teacher.scss';
 @import 'classroom_lessons/_generic_student.scss';
 @import 'classroom_lessons/_fill_in_the_blank.scss';
+@import 'classroom_lessons/_teacher_model.scss';
 
 .teach-lesson-container {
   display: flex;
