--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -342,11 +342,47 @@
     }
 }
 
+.lessons-list {
+  height: 270px;
+  margin-bottom: 40px;
+  border: 1px solid #cecece;
+  .header-container {
+    font-weight: 600;
+    height: 46px;
+    border-bottom: solid 1px #e9e9e9;
+    h3 {
+      font-size: 16px;
+    }
+    a {
+      font-size: 14px;
+      color: #00c2a2;
+    }
+  }
+  .image-container {
+    width: 36px;
+    height: 36px;
+    border-radius: 3px;
+    border: solid 1px #027360;
+    img {
+      height: 22px;
+    }
+  }
+  .q-button {
+      font-size: 14px;
+  }
+  span {
+    padding-left: 12px;
+    font-size: 14px;
+    color: #027360;
+  }
+  .lesson-item {
+    height: 52px;
+  }
+}
+
     #google-classroom-mini {
         img {
           width: 42px;
           margin-bottom: 8px;
         }
     }
-
-    
