--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -343,6 +343,9 @@
 }
 
 .lessons-list {
+  @media (max-width: 700px) {
+    display: none;
+  }
   height: 270px;
   margin-bottom: 40px;
   border: 1px solid #cecece;
