Added pointer cursor to button

--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -37,6 +37,7 @@
         button {
           background-color: #00c2a2;
           color: #fff;
+          cursor: pointer;
         }
       }
     }
