--- a/app/assets/stylesheets/shared/icons.scss
+++ b/app/assets/stylesheets/shared/icons.scss
@@ -77,6 +77,48 @@
   height: 40px;
 }
 
+.icon-puzzle-green {
+  background-image: image-url("scorebook/icon-puzzle-green.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
+.icon-diagnostic-green {
+  background-image: image-url("scorebook/icon-diagnostic-green.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
+.icon-connect-green {
+  background-image: image-url("scorebook/icon-connect-green.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
+.icon-flag-green {
+  background-image: image-url("scorebook/icon-flag-green.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
+.icon-lessons-green {
+  background-image: image-url("scorebook/icon-lessons-green.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
+.icon-lessons {
+  background-image: image-url("scorebook/icon-lessons.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 40px;
+}
+
 .icon-flag {
   background-image: image-url("scorebook/icon-flag.png");
   background-repeat: no-repeat;
