lessons list has loading indicator and calls on cache route

--- a/app/assets/stylesheets/pages/dashboard.scss
+++ b/app/assets/stylesheets/pages/dashboard.scss
@@ -352,6 +352,7 @@
     padding: 0 20 8 20px;
     border: 1px solid #cecece;
     max-width: 638px;
+    height: 270px;
     margin: auto;
   }
   .header-container {
