Fixed styling on teacher answer part

--- a/app/styles/components/classroom_lessons/_teacher_model.scss
+++ b/app/styles/components/classroom_lessons/_teacher_model.scss
@@ -16,6 +16,8 @@
 }
 
 .student-model-wrapper {
-  text-align: center;
-  font-size: 36px;
+  .student-model-question {
+    text-align: center;
+    font-size: 36px;
+  }
 }
