adds pointer to launch lesson button

--- a/app/assets/stylesheets/pages/my_lessons.scss
+++ b/app/assets/stylesheets/pages/my_lessons.scss
@@ -17,6 +17,7 @@
   }
   .launch-lesson {
     margin-left: 10px;
+    cursor: pointer;
     width: 155px;
     height: 40px;
     border-radius: 3px;
