--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -18,14 +18,14 @@
   background-color: white;
   height: calc(100vh - 50px);
   .side-bar {
-    width: 460px;
+    width: 33%;
     height: 100%;
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
     padding: 15px;
     overflow-y: scroll;
-
+    border-right: solid 1px #e9e9e9;
     .slide-preview {
       background-color: white;
       height: 250px;
@@ -80,9 +80,8 @@
   }
 
   .main-content {
-    padding: 20px 30px 15px;
-    width: 100%;
-    max-width: 900px;
+    padding: 20px 30px 0px;
+    width: 66%;
     overflow-y: scroll;
     .main-content-wrapper {
       // width: 100%;
