add absentTeacher component for when the teacher is not in the lesson

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -11,6 +11,7 @@
 @import 'classroom_lessons/_generic_student.scss';
 @import 'classroom_lessons/_fill_in_the_blank.scss';
 @import 'classroom_lessons/_teacher_model.scss';
+@import 'classroom_lessons/_absent_teacher.scss';
 
 .teach-lesson-container {
   display: flex;
