--- a/app/styles/components/classroom_lessons/_watch_teacher.scss
+++ b/app/styles/components/classroom_lessons/_watch_teacher.scss
@@ -15,6 +15,8 @@
     img {
       display: block;
       margin: auto;
+      width: 163px;
+      height: 157px;
     }
     h1 {
       margin-top: 25px;
