--- a/app/styles/components/classroom_lessons/student_static_page.scss
+++ b/app/styles/components/classroom_lessons/student_static_page.scss
@@ -5,6 +5,7 @@
   height: calc(100vh - 50px);
   text-align: center;
   color: #000000;
+  margin-top: 30px;
   .student-static-page {
     width: 100%;
     max-width: 770px;
