Move more assets to assets.quill.org

--- a/app/views/pages/home_new.html.erb
+++ b/app/views/pages/home_new.html.erb
@@ -225,8 +225,8 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
   <h3>How Quill Works</h3>
   <div class="how-setup">
     <div class="how-img-container">
-      <img class="setup-img" src="images/homepage/setup_icon.svg"/>
-      <img class="line" src="images/homepage/line_1.svg"/>
+      <img class="setup-img" src="https://assets.quill.org/images/homepage/setup_icon.svg"/>
+      <img class="line" src="https://assets.quill.org/images/homepage/line_1.svg"/>
     </div>
     <div class="how-text-container">
       <h5>Set up your classroom, without IT</h5>
@@ -238,7 +238,7 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
   <div class="how-step-2-3">
     <div class="how-choose">
       <div class="how-img-container">
-        <img class="setup-img" src="images/homepage/activities_icon.svg"/>
+        <img class="setup-img" src="https://assets.quill.org/images/homepage/activities_icon.svg"/>
       </div>
       <div class="how-text-container">
       <h5>Choose activities</h5>
@@ -249,8 +249,8 @@ Quill Grammar has over 150 sentence writing activities to help your students. Ou
     </div>
     <div class="how-reporting">
       <div class="how-img-container">
-        <img class="line-2" src="images/homepage/line_2.svg"/>
-        <img class="setup-img" src="images/homepage/reporting_icon.svg"/>
+        <img class="line-2" src="https://assets.quill.org/images/homepage/line_2.svg"/>
+        <img class="setup-img" src="https://assets.quill.org/images/homepage/reporting_icon.svg"/>
       </div>
       <div class="how-text-container">
       <h5>Use easy-to-consume reporting</h5>
