--- a/app/views/pages/shared/_footer.html.erb
+++ b/app/views/pages/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="home-footer">
   <div class="footer-navigation">
     <div>
-      <img src="/images/homepage/quill_logo_homepage.svg"/>
+      <img src="https://assets.quill.org/images/homepage/quill_logo_homepage.svg"/>
     </div>
     <ul>
       <li>
@@ -83,12 +83,12 @@
     <p><a href="/mission">Quill is a 501(c)3 non-profit helping every student succeed thanks to our partners:</a></p>
     <a href="/partners">
       <div class="partner-links">
-        <img src="/images/homepage/gates_logo.svg"/>
-        <img src="/images/homepage/google_logo.svg"/>
-        <img src="/images/homepage/att_logo.svg"/>
-        <img src="/images/homepage/fastforward_logo.svg"/>
-        <img src="/images/homepage/gould_logo.svg"/>
-        <img src="/images/homepage/blackrock_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/gates_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/google_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/att_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/fastforward_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/gould_logo.svg"/>
+        <img src="https://assets.quill.org/images/homepage/blackrock_logo.svg"/>
       </div>
     </a>
   </div>
