add styles for login show-password button

--- a/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
+++ b/app/assets/stylesheets/pages/accounts_session_and_password_reset.scss
@@ -68,6 +68,38 @@
     .login-button {
       font-weight: bold;
     }
+    .login-password {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      width: 100%;
+      margin-bottom: 20px;
+      border: solid 1px #d4d4d4;
+      border-radius: 5px;
+      input {
+        margin: 0;
+        border: none;
+        border-radius: 5px 0 0 5px;
+      }
+      div {
+        cursor: default;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        -webkit-user-select: none;
+        user-select: none;
+        width: 65px;
+        color: white;
+        background-color: $quillgreen;
+        margin: 0;
+        padding: 9px;
+        font-weight: bold;
+        border-radius: 0 5px 5px 0;
+      }
+      .showing-password {
+        background-color: $darkgreen;
+      }
+    }
+
   }
 
   margin-bottom: 100px;
@@ -98,11 +130,12 @@
 
   input {
     /*min-width: 300px;*/
-    width: 70%;
+    width: 100%;
   }
   input[type='submit'] {
     background-color: $quillgreen;
     color: $white;
+    font-weight: bold;
   }
   input[type='radio'], input[type='radio'] + label {
     max-width: 40px;
