bold the right arrow key instruction

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -337,6 +337,9 @@
   font-size: 13px;
   font-style: italic;
   color: #c0c0c0;
+  span {
+    font-weight: 600;
+  }
   button {
     margin-left: 15px;
   }
