current student counter moves with current slide

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -68,6 +68,7 @@
         }
       }
       .slide-number {
+        cursor: pointer;
         color: #c0c0c0;
         font-size: 14px;
         line-height: 20px;
