closing all headers on a singleanswer page toggles onlyshowheaders

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -170,6 +170,7 @@
     width: 100%;
     margin-bottom: 20px;
     .script-item-heading {
+      cursor: pointer;
       font-weight: bold;
     }
     hr {
