--- a/app/assets/stylesheets/pages/manage-units.scss
+++ b/app/assets/stylesheets/pages/manage-units.scss
@@ -217,6 +217,10 @@
         color: $quillforestgreen;
         cursor: pointer;
       }
+      a, span {
+        color: #027360;
+        padding-left: 10px;
+      }
     }
   }
 
