--- a/app/assets/stylesheets/pages/preview_or_launch_modal.scss
+++ b/app/assets/stylesheets/pages/preview_or_launch_modal.scss
@@ -20,6 +20,12 @@
   transform: translate(-50%, -50%);
   padding: 35 90;
   text-align: center;
+  img {
+    position: absolute;
+    cursor: pointer;
+    top: 15px;
+    right: 15px;
+  }
   h1 {
     font-size: 22px;
     font-weight: 600;
