--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -9,11 +9,14 @@
     background-color: #fafafa;
     font-size: 16px;
     border-bottom: solid 1px #e9e9e9;
-    .show-remaining-students-button {
+    .show-remaining-students-button, .show-differences-button {
       font-size: 16px;
       font-weight: 600;
       color: #00c2a2;
       cursor: pointer;
+    }
+    .show-differences-button {
+      float: right;
     }
   }
   .no-student-submissions {
