--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -4,10 +4,8 @@
   display: flex;
   justify-content: center;
   .main-content {
-    width: 100%;
-    max-width: 960px;
+    width: 90%;
     // overflow-y: scroll;
-    padding-top: 30px;
 
     .easy-join-name-form-wrapper {
       text-align: center;
@@ -88,9 +86,9 @@
   max-width: 800px;
   background-color: 'yellow';
   .student.text-editor.card {
-    width: 250px;
-    height: 40px;
-    min-height: 0px;
+    min-width: 250px;
+    max-width: 500px;
+    min-height: 40px;
     .card-content {
       padding: 9px;
     }
