--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   .main-content {
-    width: 90%;
+    width: 100%;
+    margin: 0 35;
     // overflow-y: scroll;
 
     .easy-join-name-form-wrapper {
@@ -83,7 +84,6 @@
 }
 
 .list-blanks {
-  max-width: 800px;
   background-color: 'yellow';
   .student.text-editor.card {
     min-width: 250px;
@@ -115,7 +115,6 @@
   .your-answer {
     margin-top: 20px;
     margin-bottom: 35px;
-    width: 800px;
     min-height: 66px;
     border-radius: 3px;
     background-color: #fafafa;
