--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -47,21 +47,24 @@
           text-align: left;
           color: #c0c0c0;
           &:nth-of-type(1) {
-            width: 22%;
+            width: 20%;
           }
           &:nth-of-type(2) {
             width: 7%;
           }
           &:nth-of-type(3) {
-            width: 48%;
+            width: 40%;
           }
           &:nth-of-type(4) {
-            width: 8%;
+            width: 6%;
           }
           &:nth-of-type(5) {
-            width: 14%;
+            width: 13%;
           }
-          &:nth-of-type(4), &:nth-of-type(5) {
+          &:nth-of-type(7) {
+            width: 13%;
+          }
+          &:nth-of-type(4), &:nth-of-type(5), &:nth-of-type(7) {
             text-align: center;
           }
           p {
@@ -75,6 +78,9 @@
             font-size: 14px;
             color: #d8d8d8;
           }
+        }
+        .hidden-order {
+          visibility: hidden;
         }
       }
 
@@ -100,8 +106,17 @@
             input {
               display: none;
             }
+            .student-retry-question {
+              cursor: pointer;
+              color: #00c2a2;
+              font-size: 20px;
+            }
           }
-        }
+          .retry-question-cell {
+            text-align: center;
+            padding-left: 15px;
+          }
+         }
         tr:last-child {
           border-bottom: none;
         }
