resize list blanks

--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -83,11 +83,10 @@
 }
 
 .list-blanks {
-  max-width: 800px;
+  margin-top: 30px;
   background-color: 'yellow';
   .student.text-editor.card {
     min-width: 250px;
-    max-width: 500px;
     min-height: 40px;
     .card-content {
       padding: 9px;
