current slide stays at top of sidebar

--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -50,6 +50,7 @@
       }
     }
     .sidebar-header {
+      padding-top: 7px;
       font-family: $family-sans-serif;
       display: flex;
       justify-content: space-between;
