--- a/app/assets/stylesheets/pages/my_lessons.scss
+++ b/app/assets/stylesheets/pages/my_lessons.scss
@@ -15,20 +15,11 @@
       color: #ea9a1a;
     }
   }
-  .launch-lesson {
-    margin-left: 10px;
-    cursor: pointer;
-    width: 155px;
+  #launch-lesson {
     height: 40px;
-    border-radius: 3px;
-    background-color: #00c2a2;
-    display: flex;
-    align-items: center;
+    color: white;
     font-size: 16px;
     font-weight: bold;
-    justify-content: center;
-    color: white !important;
-    padding-left: 0px !important;
   }
   .lesson-completed {
     color: #82bf3c;
