--- a/app/assets/stylesheets/pages/choose_classroom_lesson.scss
+++ b/app/assets/stylesheets/pages/choose_classroom_lesson.scss
@@ -27,6 +27,7 @@
       height: 70px;
       display: flex;
       align-items: center;
+      justify-content: space-between;
       padding: 0px 30px;
       color: #969696;
       margin-bottom: 15px;
@@ -37,6 +38,17 @@
       .incomplete {
         font-weight: 600;
       	color: #3b3b3b;
+      }
+      .completed-text {
+        font-size: 16px;
+        font-weight: 600;
+        color: #82bf3c;
+        display: flex;
+        align-items: center;
+        i {
+          font-size: 20px;
+          margin-right: 15px;
+        }
       }
     }
   }
