lessons tool page set up

--- a/app/views/pages/shared/_tools_anchor_navbar.html.erb
+++ b/app/views/pages/shared/_tools_anchor_navbar.html.erb
@@ -28,6 +28,32 @@
     </div>
 
   </div>
+<% elsif @tool == 'lessons' %>
+<div class="tools-tabs tools-anchor-nav">
+  <% @tabs = [
+    {name: 'Overview', url: "tools/#{@tool}#overview"},
+    {name: 'How It Works', url: "tools/#{@tool}#how-it-works"},
+    {name: 'Walkthrough', url: "tools/#{@tool}#walkthrough"},
+    {name: 'Best Practices', url: "tools/#{@tool}#testimonial"}
+    ]
+    @mobile = false
+  %>
+
+  <div class="full-screen">
+    <%= render partial: "pages/shared/generic_tabs", locals: { tabs: @tabs, active_tab: @active_tab, mobile: @mobile } %>
+  </div>
+
+  <%
+    @active_tab = @active_tab.split.last
+    @mobile = true
+  %>
+
+  <div class="small-screen">
+    <%= render partial: "pages/shared/generic_tabs", locals: { tabs: @tabs, active_tab:  @active_tab, mobile: @mobile} %>
+  </div>
+
+</div>
+
 <% else %>
 <div class="tools-tabs tools-anchor-nav">
   <% @tabs = [
