--- a/app/views/pages/shared/_tools_tabs.html.erb
+++ b/app/views/pages/shared/_tools_tabs.html.erb
@@ -1,5 +1,6 @@
 <div class="tools-tabs">
   <% @tabs = [
+    {name: 'Quill Lessons', url: 'tools/lessons'},
     {name: 'Quill Connect', url: 'tools/connect'},
     {name: 'Quill Diagnostic', url: 'tools/diagnostic'},
     {name: 'Quill Proofreader', url: 'tools/proofreader'},
@@ -13,6 +14,7 @@
   </div>
 
   <% @tabs = [
+    {name: 'Lessons', url: 'tools/lessons'},
     {name: 'Connect', url: 'tools/connect'},
     {name: 'Diagnostic', url: 'tools/diagnostic'},
     {name: 'Proofreader', url: 'tools/proofreader'},
