Styled reset prompt button

--- a/app/styles/components/classroom_lessons/_script_items.scss
+++ b/app/styles/components/classroom_lessons/_script_items.scss
@@ -222,5 +222,12 @@
   .card.is-fullwidth {
     margin-bottom: 20px;
   }
-
+  .teacher-model-instructions {
+    .reset-prompt-button {
+      padding-left: 5px;
+      color: #00c2a2;
+      font-weight: bold;
+      cursor: pointer;
+    }
+  }
 }
