--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   .main-content {
     width: 100%;
+    max-width: 960px;
     margin: 0 35;
     // overflow-y: scroll;
 
