--- a/app/styles/components/_class_lessons.scss
+++ b/app/styles/components/_class_lessons.scss
@@ -19,8 +19,9 @@
   background-color: white;
   height: calc(100vh - 50px);
   .side-bar {
-    width: 33%;
-    min-width: 480px;
+    width: 460px;
+    min-width: 460px;
+    max-width: 460px;
     height: 100%;
     background-color: whitesmoke;
     display: flex;
