Fix padding on join page

--- a/app/styles/components/classroom_lessons/_play_lesson_container.scss
+++ b/app/styles/components/classroom_lessons/_play_lesson_container.scss
@@ -12,7 +12,7 @@
     .easy-join-name-form-wrapper {
       text-align: center;
       .easy-join-name-form {
-        margin: auto;
+        margin: 35px auto;
         width: 300px;
 
         p, input, button {
